--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18",
+    "react-dom": "18",
     "next": "14.2.3"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
+    "postcss": "8",
+    "tailwindcss": "3.4.1",
+    "eslint": "8",
     "eslint-config-next": "14.2.3"
+  },
+  "engines": {
+    "node": "20.11.0",
+    "npm": "10.4.0"
   }
 }
