--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.1.2",
+    "axios": "1.7.2",
     "next": "14.2.3",
+    "razorpay": "2.9.4",
     "react": "18",
     "react-dom": "18"
   },
