--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.1.2",
     "axios": "1.7.2",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "razorpay": "2.9.4",
     "react": "18",
     "react-dom": "18"
